# ms-mesh-splatting

./: README.md  train.py
submodules/diff-triangle-mesh-rasterization/: ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-triangle-mesh-rasterization/cuda_rasterizer/: adam.cu  adam.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-triangle-mesh-rasterization/diff_triangle_rasterization/: __init__.py
submodules/effrdel/: .gitignore  README.md  pyproject.toml  setup.py
submodules/effrdel/src/: bvh_bind.cpp  intersect.py  lbvh.hpp  tetutils.py
submodules/effrdel/src/rdel/: __init__.py
triangle_renderer/: __init__.py
